# mlgw_bns

./: .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  CHANGELOG.md  README.md  fast.yaml  make_default_dataset.py  mypy.ini  optimize_n_hours.py  plot_optimization_pareto.py  pyproject.toml  requirements.txt  test_modes.py  tox.ini
.github/workflows/: ci.yaml
docs/: bibliography.rst  conf.py  contact.rst  data_management.rst  dataset_generation.rst  downsampling_interpolation.rst  index.rst  install.rst  mlgw_bns_refs.bib  model.rst  model_validation.rst  overview.md  refs.bib
docs/explanation/: higher_order_modes.md
docs/package_reference/: data_management.rst  dataset_generation.rst  downsampling_interpolation.rst  fixed_dataset_training.rst  higher_order_modes.rst  hyperparameter_optimization.rst  index.rst  model.rst  multibanding.rst  neural_network.rst  principal_component_analysis.rst
docs/usage_guides/: index.rst  install.rst  optimization.md  overview.md  profiling.md  validating_results.md
mlgw_bns/: __init__.py  data_management.py  dataset_generation.py  downsampling.py  downsampling_interpolation.py  fixed_dataset_training.py  frequency_of_merger.py  higher_order_modes.py  hyperparameter_optimization.py  model.py  model_validation.py  multibanding.py  neural_network.py  principal_component_analysis.py  resample_residuals.py  taylorf2.py  taylorf2_modes.py  time_shift_fit.py  waveform_management.py
mlgw_bns/data/: best_trials.pkl  default.yaml  default_arrays.h5  default_dataset_arrays.h5  default_dataset_hyper.pkl  default_dataset_nn.pkl  fast.yaml  fast_arrays.h5  fast_nn.pkl
tests/: conftest.py  test_data_management.py  test_data_mangement.py  test_dataset_generation.py  test_downsampling_interpolation.py  test_fixed_dataset_training.py  test_frequency_of_merger.py  test_higher_order_modes.py  test_hyperparameter_optimization.py  test_imports.py  test_model.py  test_model_meta.py  test_multibanding.py  test_parameter_management.py  test_pn_joining.py  test_principal_component_analysis.py  test_results.xml  test_teobresums.py
