[tool.poetry]
name = "mlgw_bns"
version = "0.9.3"
description = "Accelerating gravitational wave template generation with machine learning."
license = "GNU GPL3"
authors = ["Jacopo Tissino <jacopo@tissino.it>"]
keywords = ["python", "gravitational-waves", "scientific"]
readme = "README.md"
homepage = "https://github.com/jacopok/mlgw_bns"
repository = "https://github.com/jacopok/mlgw_bns"


[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = ">=1.18,<1.22"
tqdm = "^4.62.3"
optuna = "^2.10.0"
scikit-learn = "^1.0.1"
PyCBC = "2.0.2"
h5py = "^3.6.0"
numba = "^0.55.0"
sortedcontainers = "^2.4.0"
joblib = "^1.1.0"
plotly = "^5.5.0"
types-setuptools = "^57.4.7"
torch = {version="^1.10.2", optional=true}
Sphinx = {version="^4.3.1", optional=true}
sphinx-rtd-theme = {version="^1.0.0", optional=true}
readthedocs-sphinx-search = {version="^0.1.1", optional=true}
myst-parser = {version="^0.15.2", optional=true}
MarkupSafe = {version = "2.0.1", optional=true}
toml = "^0.10.2"

[tool.poetry.extras]
torch = ["torch"]
docs = ["Sphinx", "sphinx-rtd-theme", "readthedocs-sphinx-search", "myst-parser", "markupsafe"]

[tool.poetry.dev-dependencies]
TEOBResumSPy = {path='../teobresums/Python', develop=true, optional=false}
pytest = "^6.1.2"
tox = "^3.20.1"
black = "^21.11b1"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.2"}
tox-gh-actions = "^2.8.1"
pre-commit = "^2.16.0"
mypy = "^0.910"
virtualenv = "^20.10.0"
ipython = "^7.30.1"
pytest-cov = "^3.0.0"
pytest-benchmark = "^3.4.1"
isort = "^5.10.1"
pylint = "^2.12.2"
pytest-cases = "^3.6.5"
numtest = "^2.0.6"
mutmut = "^2.2.0"
scalene = "^1.3.16"
pydeps = "^1.10.12"
snakeviz = "^2.1.1"
colorama = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
