[tool.poetry]
name = "mlgw_bns"
version = "0.11.0-alpha.1"
description = "Accelerating gravitational wave template generation with machine learning."
license = "GNU GPL3"
authors = ["Jacopo Tissino <jacopo@tissino.it>"]
keywords = ["python", "gravitational-waves", "scientific"]
readme = "README.md"
homepage = "https://github.com/jacopok/mlgw_bns"
repository = "https://github.com/jacopok/mlgw_bns"


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.18,<1.24" # for all kinds of array manipulation
optuna = "^2.10.0" # for optimization of hyperparameters
scikit-learn = "^1.0.1" # provides the neural networks
h5py = "^3.6.0" # for management of h5 files
numba = ">=0.56.2" # acceleration of numerical computations
joblib = "^1.1.0" # to save pickled objects such as neural networks
tqdm = "^4.62.3" # makes progressbars
sortedcontainers = "^2.4.0" # for the management of index lists while downsampling
plotly = "^5.5.0" # to make plots for optuna studies
types-setuptools = "^57.4.7" # technical
toml = "^0.10.2" # technical
Sphinx = {version="^4.3.1", optional=true}
sphinx-rtd-theme = {version="^1.0.0", optional=true}
readthedocs-sphinx-search = {version="^0.1.1", optional=true}
myst-parser = {version="^0.15.2", optional=true}
MarkupSafe = {version="2.0.1", optional=true}
sphinxcontrib-bibtex = {version="^2.4.2", optional=true}

[tool.poetry.extras]
docs = ['Sphinx', 'sphinx-rtd-theme', 'readthedocs-sphinx-search', 'myst-parser', 'MarkupSafe', 'sphinxcontrib-bibtex']

[tool.poetry.group.torch]
optional=true

[tool.poetry.group.torch.dependencies]
torch = "^1.10.2"


[tool.poetry.group.pycbc]
optional=true

[tool.poetry.group.pycbc.dependencies]
pycbc = ">=2.0.5"


[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
teobresums = ">=0.0.2"
pytest = "^6.1.2"
tox = "^3.20.1"
black = "^21.11b1"
# tox-poetry-installer = {extras = ["poetry"], version = "^0.8.2"}
tox-gh-actions = "^2.8.1"
pre-commit = "^2.16.0"
mypy = "^0.910"
virtualenv = "^20.10.0"
ipython = "^7.30.1"
pytest-cov = "^3.0.0"
pytest-benchmark = "^3.4.1"
isort = "^5.10.1"
pylint = "^2.12.2"
pytest-cases = "^3.6.5"
mutmut = "^2.2.0"
scalene = "^1.3.16"
pydeps = "^1.10.12"
snakeviz = "^2.1.1"
colorama = "^0.4.4"
click = "8.0.2"
coveralls = "^3.3.1"
pytest-profiling = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
